<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/KN"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:fontFamily="@font/t" />

            <Button
                android:id="@+id/KrNol"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/BKN"
                android:textColor="#040303"
                android:textSize="24sp"
                app:fontFamily="@font/t" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/D"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:fontFamily="@font/t" />

            <Button
                android:id="@+id/Dice"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/NBD"
                android:textColor="#040303"
                android:textSize="24sp"
                app:fontFamily="@font/t" />

            <Button
                android:id="@+id/RulsD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/Ruls"
                android:textColor="#000000"
                android:textSize="24sp"
                app:fontFamily="@font/t" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>