<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".D">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="342dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:rotation="180">

                <Button
                    android:id="@+id/RP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/r"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/ENDP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/em"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:orientation="horizontal"
                android:rotation="180">

                <TextView
                    android:id="@+id/CP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textSize="50sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/COP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#008000"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/NUMP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:rotation="180">

                <Button
                    android:id="@+id/pp25"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp21"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DA4C42"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="389dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/Declear"
                android:backgroundTint="#f3da0b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Первым Ходит:" />

            <LinearLayout
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pp11"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp12"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp13"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp14"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/pp15"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/_1"
                    android:textSize="36sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textSize="50sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/COP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#008000"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/NUMP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/t"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/RP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/r"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/ENDP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:fontFamily="@font/t"
                    android:text="@string/em"
                    android:textSize="36sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>